# Decentralized-Ecommerce-Network

./: Anchor.toml  README.md  package.json
app/: .gitignore  package-lock.json  package.json  vite.config.ts
app/src/: main.tsx
app/src/components/: AddressCard.tsx  AlertQuery.tsx  CartCard.tsx  IconButton.tsx  ImagePreview.tsx  InfoCard.tsx  MarketCard.tsx  NavLink.tsx  OrderCard.tsx  ProductCard.tsx  ProfileInput.tsx  ProgressBar.tsx  SearchBar.tsx  StyledMenuItem.tsx  TopNavbar.tsx  UserMenu.tsx
app/src/context/: AnchorContextProvider.tsx  ArweaveContextProvider.tsx  SearchContextProvider.tsx  UserContextProvider.tsx
app/src/hoc/: BaseProfile.tsx
app/src/hooks/: useAnchor.ts  useArweave.ts  useCart.ts  useOrder.ts  useProduct.ts  useSearch.ts  useUser.ts
app/src/pages/: PrivateRoutes.tsx  TestPage.tsx
app/src/router/: routes.tsx
app/src/schema/: CartSchema.ts  MarketSchema.ts  OrderSchema.ts  ProductSchema.ts  UserSchema.ts
app/src/theme/: chakraui.ts
app/src/utils/: timestampToDate.ts
migrations/app/: .gitignore  package-lock.json  package.json
migrations/app/src/: main.tsx
programs/market/: Cargo.toml
programs/order/: Cargo.toml
programs/order/src/: errors.rs  lib.rs
programs/order/src/state/: mod.rs  order.rs
programs/product/: Cargo.toml
programs/product/src/: errors.rs  lib.rs
programs/product/src/instructions/: create_product.rs  create_review.rs  mod.rs  update_product_checkup.rs
programs/product/src/state/: mod.rs  product.rs  review.rs
programs/user/: Cargo.toml
tests/: product.ts  user.ts
tests/order/: order.ts
(+67 files in other folders)
